--- a/css/styles.css
+++ b/css/styles.css
@@ -31,16 +31,16 @@ address {
   font-style: normal;
 }
 .container {
-  width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px 0 15px;
+  max-width: 320px;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 .header-container {
   align-items: center;
   display: flex;
-  height: 72px;
+  height: 56px;
   justify-content: space-between;
-  padding: 0 15px 0 15px;
+  padding: 16px 16px;
 }
 
 .header {
@@ -76,7 +76,7 @@ address {
 .header-navigation-logo-studio {
   color: #2e2f42;
 }
-.header-navigation-content {
+/*.header-navigation-content {
   align-items: center;
   display: flex;
   gap: 40px;
@@ -165,16 +165,16 @@ address {
 .header-contacts-communication:hover,
 .header-contacts-adr:focus {
   color: #404bbf;
-}
+}*/
 
 /** =========first========== */
 
 .first {
   background-color: #2e2f42;
-  max-width: 1440px;
-  height: 600px;
+  max-width: 320px;
+  height: 432px;
   flex-shrink: 0;
-  padding: 188px 0;
+  padding: 72px 0;
   align-items: center;
   display: flex;
   margin-top: 0;
@@ -248,9 +248,10 @@ address {
 .features-list {
   gap: 24px;
   display: flex;
+  flex-wrap: wrap;
 }
 .features-content {
-  width: calc((100% - 72px) / 4);
+  /*width: calc((100% - 72px) / 4);*/
 }
 .features-section {
   display: flex;
@@ -808,4 +809,252 @@ address {
 .form-contacts-button:hover,
 .form-contacts-button:focus {
   background: var(--OCEAN, #404bbf);
+}
+
+@media screen and (min-width: 320px) {
+  .container {
+    max-width: 320px;
+    padding-right: 16px;
+    padding-left: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    margin: 0 auto;
+    padding: ;
+  }
+
+  .header-navigation-content {
+    align-items: center;
+    display: flex;
+    gap: 40px;
+  }
+  .header-navigation-link {
+    display: flex;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .curent {
+    position: relative;
+    color: #404bbf;
+  }
+  .curent::after {
+    background-color: #404bbf;
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+    content: "";
+    position: absolute;
+    display: block;
+    left: 0;
+    bottom: -1px;
+  }
+
+  .header-navigation-link a {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-navigation-link a::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    width: 100%;
+    background-color: #404bbf;
+    border-radius: 2px;
+    transform-origin: right;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-navigation-link a:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
+  }
+  .header-navigation-btns {
+    color: #2e2f42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    padding: 24px 0 24px;
+  }
+
+  .header-navigation-btns:hover,
+  .header-navigation-btns:focus {
+    color: #404bbf;
+  }
+
+  .header-contacts {
+    font-style: normal;
+  }
+  .header-contacts-content a {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .header-contacts-content a:hover {
+    color: #404bbf;
+  }
+  .header-contacts-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
+  .header-contacts-content {
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header-contacts-communication {
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+
+  .header-contacts-communication:hover,
+  .header-contacts-adr:focus {
+    color: #404bbf;
+  }
+  .first {
+    background-color: #2e2f42;
+    width: 768px;
+    height: 436px;
+    flex-shrink: 0;
+    padding: 112px 136px;
+    align-items: center;
+    display: flex;
+    margin-top: 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  @media screen and (min-width: 1158px) {
+    .container {
+      max-width: 1158px;
+      margin: 0 auto;
+      padding: 0 15px 0 15px;
+    }
+    .header-navigation-content {
+      align-items: center;
+      display: flex;
+      gap: 40px;
+    }
+    .header-navigation-link {
+      display: flex;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .curent {
+      position: relative;
+      color: #404bbf;
+    }
+    .curent::after {
+      background-color: #404bbf;
+      width: 48px;
+      height: 4px;
+      border-radius: 2px;
+      content: "";
+      position: absolute;
+      display: block;
+      left: 0;
+      bottom: -1px;
+    }
+
+    .header-navigation-link a {
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .header-navigation-link a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -1px;
+      height: 4px;
+      width: 100%;
+      background-color: #404bbf;
+      border-radius: 2px;
+      transform-origin: right;
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .header-navigation-link a:hover::after {
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+    .header-navigation-btns {
+      color: #2e2f42;
+      font-size: 16px;
+      font-weight: 500;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+      padding: 24px 0 24px;
+    }
+
+    .header-navigation-btns:hover,
+    .header-navigation-btns:focus {
+      color: #404bbf;
+    }
+
+    .header-contacts {
+      font-style: normal;
+    }
+    .header-contacts-content a {
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .header-contacts-content a:hover {
+      color: #404bbf;
+    }
+    .header-contacts-list {
+      display: flex;
+      align-items: center;
+      gap: 40px;
+    }
+    .header-contacts-content {
+      transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .header-contacts-communication {
+      color: #434455;
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 1.5;
+      letter-spacing: 0.02em;
+    }
+
+    .header-contacts-communication:hover,
+    .header-contacts-adr:focus {
+      color: #404bbf;
+    }
+  }
+  .first {
+    background-color: #2e2f42;
+    max-width: 1440px;
+    height: 600px;
+    flex-shrink: 0;
+    padding: 188px 0;
+    align-items: center;
+    display: flex;
+    margin-top: 0;
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/Dark-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+
+  .features-list {
+    gap: 24px;
+    display: flex;
+  }
+  .features-content {
+    width: calc((100% - 72px) / 4);
+  }
 }
