--- a/css/styles.css
+++ b/css/styles.css
@@ -166,7 +166,7 @@ address {
 
 .menu-mob {
   width: 320px;
-  height: 640px;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
@@ -263,7 +263,7 @@ address {
   flex-direction: row;
   justify-content: flex-start;
   gap: 40px;
-  margin-top: 48px;
+  margin-bottom: 48px;
 }
 .mob-soc-link {
   width: 40px;
@@ -290,10 +290,11 @@ address {
 .first {
   background-color: #2e2f42;
   flex-shrink: 0;
-  padding: 72px 16px;
+  padding-top: 72px;
+  padding-bottom: 72px;
+  justify-content: center;
   align-items: center;
   display: flex;
-  margin-top: 0;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
@@ -322,7 +323,7 @@ address {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  width: 288px;
+  max-width: 200px;
   margin-bottom: 72px;
 }
 .first-btn-order {
@@ -346,6 +347,7 @@ address {
   border-radius: 4px;
   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0 auto;
 }
 .first-btn-order:hover,
 .first-btn-order:focus {
@@ -359,6 +361,8 @@ address {
 
 .features {
   padding: 96px 0 96px;
+}
+.features-container {
 }
 .visually-hidden {
   position: absolute;
@@ -376,7 +380,6 @@ address {
   width: 100%;
   flex-direction: column;
   align-items: flex-start;
-  gap: 8px;
   flex-wrap: wrap;
 }
 .features-content {
@@ -603,15 +606,13 @@ address {
 /** ==========footer========= */
 
 .footer {
-  width: 320px;
-  height: 664px;
+  padding: 96px 0;
   background: #2e2f42;
 }
 .footer-container {
   margin: 0;
 }
 .footer-container-one {
-  padding-top: 96px;
   margin-bottom: 72px;
 }
 .footer-logo-web {
@@ -645,7 +646,6 @@ address {
   margin-bottom: 72px;
 }
 .footer-container-two {
-  margin-bottom: 16px;
 }
 .footer-social-madia {
   flex-shrink: 0;
@@ -653,7 +653,6 @@ address {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 72px;
 }
 .footer-social-madia-li {
   width: 40px;
@@ -775,11 +774,11 @@ address {
   position: absolute;
   top: 50%;
   left: 50%;
-  padding: 72px 24px 24px 24px;
   transform: translate(-50%, -50%);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px;
 }
 .modal-btn {
   position: absolute;
@@ -960,6 +959,7 @@ address {
     max-width: 768px;
     padding-left: 16px;
     padding-right: 16px;
+    margin: 0 auto;
   }
   .header-navigation-content {
     display: flex;
@@ -1074,12 +1074,11 @@ address {
   /*----footer-----*/
 
   .footer {
-    width: 768px;
-    height: 456px;
+    padding: 96px 0;
   }
   .footer-container {
     padding-left: 108px;
-    gap: 24px;
+    gap: 72px 24px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -1100,6 +1099,9 @@ address {
   }
   .social-networks-two {
     margin-left: 0;
+  }
+  .footer-input {
+    max-width: 264px;
   }
   .footer-lower-subscribe {
     margin-bottom: 16px;
@@ -1129,7 +1131,6 @@ address {
   }
   .header-container {
     height: 72px;
-    padding: 0 15px 0 15px;
   }
   .header-contacts-list {
     display: flex;
@@ -1234,7 +1235,6 @@ address {
     padding: 120px 0 120px;
   }
   .third-container {
-    padding-top: 120px;
   }
   .third-list {
     gap: 24px;
@@ -1257,14 +1257,9 @@ address {
   /** ==========footer========= */
 
   .footer {
-    width: 1440px;
-    height: 312px;
-    margin: 100px 0 100px;
+    padding: 100px 0;
   }
   .footer-container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px 0 15px;
   }
   .footer-container-one {
     margin-right: 120px;
@@ -1294,23 +1289,4 @@ address {
   }
 
   /**===============================*/
-
-  .backdrop {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    background: rgba(46, 47, 66, 0.4);
-    top: 0;
-    left: 0;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  .is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-  }
 }
